--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,15 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
     "react-toastify": "^9.0.7",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.4.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
@@ -56,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
